force-app/main/default/objects/Stock__c/fields/ACTUAL_RELEASE_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>ACTUAL_RELEASE_DATETIME__c</fullName>
    <label>ACTUAL_RELEASE_DATETIME</label>
    <type>DateTime</type>
</CustomField>