force-app/main/default/objects/Stock__c/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>Actual cash value of a vehicle</description>
    <inlineHelpText>Actual cash value of a vehicle</inlineHelpText>
    <label>ACV</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>