force-app/main/default/objects/Stock__c/fields/Adjuster__c.field-meta.xml
<CustomField>
    <fullName>Adjuster__c</fullName>
    <description>Assigned Adjuster</description>
    <inlineHelpText>Assigned Adjuster</inlineHelpText>
    <label>Adjuster</label>
    <length>100</length>
    <type>Text</type>
</CustomField>