force-app/main/default/objects/Stock__c/fields/ASAP_Error__c.field-meta.xml
<CustomField>
    <fullName>ASAP_Error__c</fullName>
    <description>Needed to support getting the ASAP error code listed on the VPE Listing object.  PLEASE DON&apos;T DELETE</description>
    <label>ASAP Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>