force-app/main/default/objects/Stock__c/fields/Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Date__c</fullName>
    <description>Assignment date of stock.</description>
    <inlineHelpText>Assignment date of stock.</inlineHelpText>
    <label>Assignment Date</label>
    <type>Date</type>
</CustomField>