force-app/main/default/objects/Stock__c/fields/ASSIGNMENT_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>ASSIGNMENT_DATETIME__c</fullName>
    <label>ASSIGNMENT_DATETIME</label>
    <type>DateTime</type>
</CustomField>