force-app/main/default/objects/Stock__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <description>Assigned Type. E.g., Bid Fast Assignment or Standard.</description>
    <inlineHelpText>Assigned Type. E.g., Bid Fast Assignment or Standard.</inlineHelpText>
    <label>Assignment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>