force-app/main/default/objects/Stock__c/fields/AUCTION_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>AUCTION_DATETIME__c</fullName>
    <label>AUCTION_DATETIME</label>
    <type>DateTime</type>
</CustomField>