force-app/main/default/objects/Stock__c/fields/AwardPending__c.field-meta.xml
<CustomField>
    <fullName>AwardPending__c</fullName>
    <label>AwardPending</label>
    <type>Date</type>
</CustomField>