force-app/main/default/objects/Stock__c/fields/Bidder_Contact_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Bidder_Contact_18_Digit_ID__c</fullName>
    <formula>Stock_Bid__r.Bidder_Contact__r.X18_Digit_Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bidder Contact 18 Digit ID</label>
    <type>Text</type>
</CustomField>