force-app/main/default/objects/Stock__c/fields/Bidder_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Bidder_Contact_Email__c</fullName>
    <formula>Stock_Bid__r.Bidder_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bidder Contact Email</label>
    <type>Text</type>
</CustomField>