force-app/main/default/objects/Stock__c/fields/Bidder_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Bidder_Contact_First_Name__c</fullName>
    <formula>Stock_Bid__r.Bidder_Contact__r.FirstName</formula>
    <label>Bidder Contact First Name</label>
    <type>Text</type>
</CustomField>