force-app/main/default/objects/Stock__c/fields/Body_Style__c.field-meta.xml
<CustomField>
    <fullName>Body_Style__c</fullName>
    <description>Body Style of the Vehicle</description>
    <inlineHelpText>Body Style of the Vehicle</inlineHelpText>
    <label>Body Style</label>
    <length>50</length>
    <type>Text</type>
</CustomField>