force-app/main/default/objects/Stock__c/fields/BRANCH_DEFAULT_ADVANCE_CHG_MAX_AUTHORIZE__c.field-meta.xml
<CustomField>
    <fullName>BRANCH_DEFAULT_ADVANCE_CHG_MAX_AUTHORIZE__c</fullName>
    <label>BRANCH_DEFAULT_ADVANCE_CHG_MAX_AUTHORIZE</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>