force-app/main/default/objects/Stock__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Admin Branch</description>
    <inlineHelpText>Admin Branch</inlineHelpText>
    <label>Branch Name</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>