force-app/main/default/objects/Stock__c/fields/Branch_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name_Text__c</fullName>
    <description>This is the text value of Branch Name, used in Broker Community</description>
    <formula>Branch_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Name</label>
    <type>Text</type>
</CustomField>