force-app/main/default/objects/Stock__c/fields/Branch_number__c.field-meta.xml
<CustomField>
    <fullName>Branch_number__c</fullName>
    <description>Admin Branch Number</description>
    <inlineHelpText>Admin Branch Number</inlineHelpText>
    <label>Branch number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>