force-app/main/default/objects/Stock__c/fields/Branch_Region__c.field-meta.xml
<CustomField>
    <fullName>Branch_Region__c</fullName>
    <description>Admin Branch Region</description>
    <formula>Branch_Name__r.IAA_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Admin Branch Region</inlineHelpText>
    <label>Branch Region</label>
    <type>Text</type>
</CustomField>