force-app/main/default/objects/Stock__c/fields/Buyer_ID__c.field-meta.xml
<CustomField>
    <fullName>Buyer_ID__c</fullName>
    <description>Buyer&apos;s ASAP ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Buyer&apos;s ASAP ID</inlineHelpText>
    <label>Buyer ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>