force-app/main/default/objects/Stock__c/fields/Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Buyers Name</description>
    <inlineHelpText>Buyers Name</inlineHelpText>
    <label>Buyer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>