force-app/main/default/objects/Stock__c/fields/BUYER_PAID_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>BUYER_PAID_DATETIME__c</fullName>
    <label>BUYER_PAID_DATETIME</label>
    <type>DateTime</type>
</CustomField>