force-app/main/default/objects/Stock__c/fields/BuyerDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>BuyerDeliveryDate__c</fullName>
    <label>BuyerDeliveryDate</label>
    <type>Date</type>
</CustomField>