force-app/main/default/objects/Stock__c/fields/BuyerPickupDateTime__c.field-meta.xml
<CustomField>
    <fullName>BuyerPickupDateTime__c</fullName>
    <label>BuyerPickupDateTime</label>
    <type>Date</type>
</CustomField>