force-app/main/default/objects/Stock__c/fields/CANCEL_REASON__c.field-meta.xml
<CustomField>
    <fullName>CANCEL_REASON__c</fullName>
    <label>CANCEL_REASON</label>
    <length>6</length>
    <type>Text</type>
</CustomField>