force-app/main/default/objects/Stock__c/fields/CANCELLATION_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>CANCELLATION_DATETIME__c</fullName>
    <label>CANCELLATION_DATETIME</label>
    <type>DateTime</type>
</CustomField>