force-app/main/default/objects/Stock__c/fields/CHECKIN_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>CHECKIN_DATETIME__c</fullName>
    <label>CHECKIN_DATETIME</label>
    <type>DateTime</type>
</CustomField>