force-app/main/default/objects/Stock__c/fields/CLOSE_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>CLOSE_DATETIME__c</fullName>
    <label>CLOSE_DATETIME</label>
    <type>DateTime</type>
</CustomField>