force-app/main/default/objects/Stock__c/fields/CREATE_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>CREATE_DATETIME__c</fullName>
    <label>CREATE_DATETIME</label>
    <type>DateTime</type>
</CustomField>