force-app/main/default/objects/Stock__c/fields/Date_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Loss__c</fullName>
    <description>Reported date of loss</description>
    <inlineHelpText>Reported date of loss</inlineHelpText>
    <label>Date of Loss</label>
    <type>Date</type>
</CustomField>