force-app/main/default/objects/Stock__c/fields/DeliveryDistance__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDistance__c</fullName>
    <label>DeliveryDistance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>