force-app/main/default/objects/Stock__c/fields/DISPATCH_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>DISPATCH_DATETIME__c</fullName>
    <label>DISPATCH_DATETIME</label>
    <type>DateTime</type>
</CustomField>