force-app/main/default/objects/Stock__c/fields/ENGINE__c.field-meta.xml
<CustomField>
    <fullName>ENGINE__c</fullName>
    <label>ENGINE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>