force-app/main/default/objects/Stock__c/fields/Est_Cost_of_Repair__c.field-meta.xml
<CustomField>
    <fullName>Est_Cost_of_Repair__c</fullName>
    <description>Est. Cost of Repair</description>
    <label>Est. Cost of Repair</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>