force-app/main/default/objects/Stock__c/fields/Exterior_Color__c.field-meta.xml
<CustomField>
    <fullName>Exterior_Color__c</fullName>
    <description>Color of Vehicle.</description>
    <inlineHelpText>Color of Vehicle.</inlineHelpText>
    <label>Exterior Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>