force-app/main/default/objects/Stock__c/fields/hasRA__c.field-meta.xml
<CustomField>
    <fullName>hasRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasRA</label>
    <type>Checkbox</type>
</CustomField>