force-app/main/default/objects/Stock__c/fields/IAA_REQUESTED_TO_PAY_ADVANCE_CHARGES__c.field-meta.xml
<CustomField>
    <fullName>IAA_REQUESTED_TO_PAY_ADVANCE_CHARGES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IAA_REQUESTED_TO_PAY_ADVANCE_CHARGES</label>
    <type>Checkbox</type>
</CustomField>