force-app/main/default/objects/Stock__c/fields/IAA_Transport_Requested__c.field-meta.xml
<CustomField>
    <fullName>IAA_Transport_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies if IAA Transport was requested for this stock.</description>
    <inlineHelpText>This field identifies if IAA Transport was requested for this stock.</inlineHelpText>
    <label>IAA Transport Requested</label>
    <type>Checkbox</type>
</CustomField>