force-app/main/default/objects/Stock__c/fields/KEY_FOB__c.field-meta.xml
<CustomField>
    <fullName>KEY_FOB__c</fullName>
    <label>KEY_FOB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>