force-app/main/default/objects/Stock__c/fields/Keys__c.field-meta.xml
<CustomField>
    <fullName>Keys__c</fullName>
    <description>Defines if keys are available</description>
    <inlineHelpText>Defines if keys are available</inlineHelpText>
    <label>Keys</label>
    <length>100</length>
    <type>Text</type>
</CustomField>