force-app/main/default/objects/Stock__c/fields/KEYS_INDICATOR__c.field-meta.xml
<CustomField>
    <fullName>KEYS_INDICATOR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KEYS_INDICATOR</label>
    <type>Checkbox</type>
</CustomField>