force-app/main/default/objects/Stock__c/fields/LICENSE_PLATE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>LICENSE_PLATE_NUMBER__c</fullName>
    <label>LICENSE_PLATE_NUMBER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>