force-app/main/default/objects/Stock__c/fields/LICENSE_STATE_CODE__c.field-meta.xml
<CustomField>
    <fullName>LICENSE_STATE_CODE__c</fullName>
    <label>LICENSE_STATE_CODE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>