force-app/main/default/objects/Stock__c/fields/Min_Bid__c.field-meta.xml
<CustomField>
    <fullName>Min_Bid__c</fullName>
    <label>Min Bid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>