force-app/main/default/objects/Stock__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Model of the Vehicle</description>
    <inlineHelpText>Model of the Vehicle</inlineHelpText>
    <label>Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>