force-app/main/default/objects/Stock__c/fields/NICB_REPORTED_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>NICB_REPORTED_DATETIME__c</fullName>
    <label>NICB_REPORTED_DATETIME</label>
    <type>DateTime</type>
</CustomField>