force-app/main/default/objects/Stock__c/fields/NMVTIS_REPORTED_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>NMVTIS_REPORTED_DATETIME__c</fullName>
    <label>NMVTIS_REPORTED_DATETIME</label>
    <type>DateTime</type>
</CustomField>