force-app/main/default/objects/Stock__c/fields/Number_of_Bids__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bids__c</fullName>
    <description>Displays the number of placed bids for the stock.</description>
    <inlineHelpText>Displays the number of placed bids for the stock.</inlineHelpText>
    <label>Number of Bids</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>