force-app/main/default/objects/Stock__c/fields/NUMBER_OF_DAYS_OF_STORAGE__c.field-meta.xml
<CustomField>
    <fullName>NUMBER_OF_DAYS_OF_STORAGE__c</fullName>
    <label>NUMBER_OF_DAYS_OF_STORAGE</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>