force-app/main/default/objects/Stock__c/fields/ODOMETER_READING__c.field-meta.xml
<CustomField>
    <fullName>ODOMETER_READING__c</fullName>
    <label>ODOMETER_READING</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>