force-app/main/default/objects/Stock__c/fields/ODOMETER_READING_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ODOMETER_READING_TYPE__c</fullName>
    <label>ODOMETER_READING_TYPE</label>
    <length>40</length>
    <type>Text</type>
</CustomField>