force-app/main/default/objects/Stock__c/fields/of_Reruns__c.field-meta.xml
<CustomField>
    <fullName>of_Reruns__c</fullName>
    <description>Displays the number of reruns a stock has.</description>
    <inlineHelpText>Displays the number of reruns a stock has.</inlineHelpText>
    <label># of Reruns</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>