force-app/main/default/objects/Stock__c/fields/ORIGINAL_ADVANCE_CHG_MAX_AUTHORIZED_AMOU__c.field-meta.xml
<CustomField>
    <fullName>ORIGINAL_ADVANCE_CHG_MAX_AUTHORIZED_AMOU__c</fullName>
    <label>ORIGINAL_ADVANCE_CHG_MAX_AUTHORIZED_AMOU</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>