force-app/main/default/objects/Stock__c/fields/Original_Title__c.field-meta.xml
<CustomField>
    <fullName>Original_Title__c</fullName>
    <description>Original Title number</description>
    <inlineHelpText>Original Title number</inlineHelpText>
    <label>Original Title #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>