force-app/main/default/objects/Stock__c/fields/Original_Title_Brand__c.field-meta.xml
<CustomField>
    <fullName>Original_Title_Brand__c</fullName>
    <description>Brand of Original Title</description>
    <inlineHelpText>Brand of Original Title</inlineHelpText>
    <label>Original Title Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>