force-app/main/default/objects/Stock__c/fields/Original_Title_Recieved_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Title_Recieved_Date__c</fullName>
    <description>Date Original title was received</description>
    <inlineHelpText>Date Original title was received</inlineHelpText>
    <label>Original Title Received Date</label>
    <type>Date</type>
</CustomField>