force-app/main/default/objects/Stock__c/fields/Original_Title_State__c.field-meta.xml
<CustomField>
    <fullName>Original_Title_State__c</fullName>
    <description>State original title was obtained in.</description>
    <inlineHelpText>State original title was obtained in.</inlineHelpText>
    <label>Original Title State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>