force-app/main/default/objects/Stock__c/fields/Original_Title_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_Title_Type__c</fullName>
    <description>Type of Original Title</description>
    <inlineHelpText>Type of Original Title</inlineHelpText>
    <label>Original Title Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>