force-app/main/default/objects/Stock__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <label>Payer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>