force-app/main/default/objects/Stock__c/fields/Payment_Branch__c.field-meta.xml
<CustomField>
    <fullName>Payment_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment_Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Stocks (Payment_Branch)</relationshipLabel>
    <relationshipName>Stocks1</relationshipName>
    <type>Lookup</type>
</CustomField>