force-app/main/default/objects/Stock__c/fields/Payment_Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Branch_Number__c</fullName>
    <description>User Story 500528: Stock/Stock Bid Fields for Lookup Association</description>
    <label>Payment Branch Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>