force-app/main/default/objects/Stock__c/fields/Payment_Branch_Text__c.field-meta.xml
<CustomField>
    <fullName>Payment_Branch_Text__c</fullName>
    <formula>Payment_Branch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Branch</label>
    <type>Text</type>
</CustomField>