force-app/main/default/objects/Stock__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>Payment_Date</label>
    <type>Date</type>
</CustomField>