force-app/main/default/objects/Stock__c/fields/PaymentIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PaymentIdentifier__c</fullName>
    <label>PaymentIdentifier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>