force-app/main/default/objects/Stock__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>PaymentMethod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Certified Check</fullName>
            </value>
            <value>
                <fullName>Money Order</fullName>
            </value>
            <value>
                <fullName>Account Credit</fullName>
            </value>
            <value>
                <fullName>Buyer Credit Card</fullName>
            </value>
            <value>
                <fullName>Company Check</fullName>
            </value>
            <value>
                <fullName>AFC Finance</fullName>
            </value>
            <value>
                <fullName>Certified/Cashier’s Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>GreatPlains Payment</fullName>
            </value>
            <value>
                <fullName>I-Payment</fullName>
            </value>
            <value>
                <fullName>Marketing Promo</fullName>
            </value>
            <value>
                <fullName>Online Credit Card</fullName>
            </value>
            <value>
                <fullName>Non-AFC Financed</fullName>
            </value>
            <value>
                <fullName>Online PayPal</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Traveler’s Check(s)</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>DSC</fullName>
            </value>
            <value>
                <fullName>AFC Buy&amp;Go</fullName>
            </value>
            <value>
                <fullName>KCS</fullName>
            </value>
            <value>
                <fullName>First Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>