force-app/main/default/objects/Stock__c/fields/PICKUP_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>PICKUP_DATETIME__c</fullName>
    <label>PICKUP_DATETIME</label>
    <type>DateTime</type>
</CustomField>