force-app/main/default/objects/Stock__c/fields/PRIMARY_DAMAGE__c.field-meta.xml
<CustomField>
    <fullName>PRIMARY_DAMAGE__c</fullName>
    <label>PRIMARY_DAMAGE</label>
    <length>40</length>
    <type>Text</type>
</CustomField>