force-app/main/default/objects/Stock__c/fields/PRIMARY_DAMAGE_CODE__c.field-meta.xml
<CustomField>
    <fullName>PRIMARY_DAMAGE_CODE__c</fullName>
    <label>PRIMARY_DAMAGE_CODE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>