force-app/main/default/objects/Stock__c/fields/PROCESS_STATUS_DESC__c.field-meta.xml
<CustomField>
    <fullName>PROCESS_STATUS_DESC__c</fullName>
    <label>PROCESS_STATUS_DESC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>