force-app/main/default/objects/Stock__c/fields/Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_ID__c</fullName>
    <description>Provider&apos;s ASAP ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Provider&apos;s ASAP ID</inlineHelpText>
    <label>Provider ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>