force-app/main/default/objects/Stock__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provider&apos;s Name</description>
    <inlineHelpText>Provider&apos;s Name</inlineHelpText>
    <label>Provider Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stocks (Provider Name)</relationshipLabel>
    <relationshipName>Stocks1</relationshipName>
    <type>Lookup</type>
</CustomField>