force-app/main/default/objects/Stock__c/fields/Purchased_at_Physical_Location__c.field-meta.xml
<CustomField>
    <fullName>Purchased_at_Physical_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the stock sold in person at a physical Branch location.</description>
    <inlineHelpText>Indicates if the stock sold in person at a physical Branch location.</inlineHelpText>
    <label>Purchased at Physical Location</label>
    <type>Checkbox</type>
</CustomField>