force-app/main/default/objects/Stock__c/fields/Purchased_Via_Timed_Auction__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Via_Timed_Auction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informs if the stock was purchased via timed auction</description>
    <inlineHelpText>Informs if the stock was purchased via timed auction</inlineHelpText>
    <label>Purchased Via Timed Auction</label>
    <type>Checkbox</type>
</CustomField>