force-app/main/default/objects/Stock__c/fields/QUOTED_RELEASE_DATE__c.field-meta.xml
<CustomField>
    <fullName>QUOTED_RELEASE_DATE__c</fullName>
    <label>QUOTED_RELEASE_DATE</label>
    <type>DateTime</type>
</CustomField>