force-app/main/default/objects/Stock__c/fields/QuotedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>QuotedDeliveryDate__c</fullName>
    <label>QuotedDeliveryDate</label>
    <type>Date</type>
</CustomField>