force-app/main/default/objects/Stock__c/fields/READY_FOR_SALE_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>READY_FOR_SALE_DATETIME__c</fullName>
    <label>READY_FOR_SALE_DATETIME</label>
    <type>DateTime</type>
</CustomField>