force-app/main/default/objects/Stock__c/fields/RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>