force-app/main/default/objects/Stock__c/fields/Run_and_Drive_at_Check_in__c.field-meta.xml
<CustomField>
    <fullName>Run_and_Drive_at_Check_in__c</fullName>
    <description>Provides details if car Runs and Drives at Check In.</description>
    <inlineHelpText>Provides details if car Runs and Drives at Check In.</inlineHelpText>
    <label>Run and Drive at Check in</label>
    <length>50</length>
    <type>Text</type>
</CustomField>