force-app/main/default/objects/Stock__c/fields/Run_and_Drive_at_Sale__c.field-meta.xml
<CustomField>
    <fullName>Run_and_Drive_at_Sale__c</fullName>
    <description>Provides details if car Runs and Drives at Sale.</description>
    <inlineHelpText>Provides details if car Runs and Drives at Sale.</inlineHelpText>
    <label>Run and Drive at Sale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>