force-app/main/default/objects/Stock__c/fields/Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sale_Amount__c</fullName>
    <description>Amount of sale</description>
    <inlineHelpText>Amount of sale</inlineHelpText>
    <label>Sale Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>