force-app/main/default/objects/Stock__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <description>Date of the sale</description>
    <inlineHelpText>Date of the sale</inlineHelpText>
    <label>Sale Date</label>
    <type>Date</type>
</CustomField>