force-app/main/default/objects/Stock__c/fields/Sale_Method__c.field-meta.xml
<CustomField>
    <fullName>Sale_Method__c</fullName>
    <label>Sale Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>