force-app/main/default/objects/Stock__c/fields/Sale_Title__c.field-meta.xml
<CustomField>
    <fullName>Sale_Title__c</fullName>
    <description>Title number after Sale</description>
    <inlineHelpText>Title number after Sale</inlineHelpText>
    <label>Sale Title #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>