force-app/main/default/objects/Stock__c/fields/Sale_Title_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sale_Title_Brand__c</fullName>
    <description>Brand of Sale Title</description>
    <inlineHelpText>Brand of Sale Title</inlineHelpText>
    <label>Sale Title Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>