force-app/main/default/objects/Stock__c/fields/Sale_Title_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Title_Received_Date__c</fullName>
    <description>Date Sale title was received</description>
    <inlineHelpText>Date Sale title was received</inlineHelpText>
    <label>Sale Title Received Date</label>
    <type>DateTime</type>
</CustomField>