force-app/main/default/objects/Stock__c/fields/Sale_Title_State__c.field-meta.xml
<CustomField>
    <fullName>Sale_Title_State__c</fullName>
    <description>State of new title after sale.</description>
    <inlineHelpText>State of new title after sale.</inlineHelpText>
    <label>Sale Title State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>