force-app/main/default/objects/Stock__c/fields/Sale_Title_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Title_Type__c</fullName>
    <description>Vehicle Type</description>
    <inlineHelpText>Vehicle Type</inlineHelpText>
    <label>Sale Title Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>