force-app/main/default/objects/Stock__c/fields/SALVAGE_DROP_OFF_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>SALVAGE_DROP_OFF_DATETIME__c</fullName>
    <label>SALVAGE_DROP_OFF_DATETIME</label>
    <type>DateTime</type>
</CustomField>