force-app/main/default/objects/Stock__c/fields/SENT_FROM__c.field-meta.xml
<CustomField>
    <fullName>SENT_FROM__c</fullName>
    <label>SENT_FROM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>