force-app/main/default/objects/Stock__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <description>Series of Make and Model</description>
    <inlineHelpText>Series of Make and Model</inlineHelpText>
    <label>Series</label>
    <length>100</length>
    <type>Text</type>
</CustomField>