force-app/main/default/objects/Stock__c/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <description>Date invoice was sent to the Provider</description>
    <inlineHelpText>Date invoice was sent to the Provider</inlineHelpText>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>