force-app/main/default/objects/Stock__c/fields/SOLD_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>SOLD_DATETIME__c</fullName>
    <label>SOLD_DATETIME</label>
    <type>DateTime</type>
</CustomField>