force-app/main/default/objects/Stock__c/fields/SP_PREPAID_ADVANCE_CHARGES_THROUGH_DATE__c.field-meta.xml
<CustomField>
    <fullName>SP_PREPAID_ADVANCE_CHARGES_THROUGH_DATE__c</fullName>
    <label>SP_PREPAID_ADVANCE_CHARGES_THROUGH_DATE</label>
    <type>DateTime</type>
</CustomField>