force-app/main/default/objects/Stock__c/fields/SP_PREPAID_CATEGORY_DESC__c.field-meta.xml
<CustomField>
    <fullName>SP_PREPAID_CATEGORY_DESC__c</fullName>
    <label>SP_PREPAID_CATEGORY_DESC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance Admin</fullName>
            </value>
            <value>
                <fullName>Advance Other</fullName>
            </value>
            <value>
                <fullName>Advance Storage</fullName>
            </value>
            <value>
                <fullName>Advance Tear Down</fullName>
            </value>
            <value>
                <fullName>Advance Tow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>