force-app/main/default/objects/Stock__c/fields/SP_PREPAID_TOTAL_AMT__c.field-meta.xml
<CustomField>
    <fullName>SP_PREPAID_TOTAL_AMT__c</fullName>
    <label>SP_PREPAID_TOTAL_AMT</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>