force-app/main/default/objects/Stock__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <description>Reference to the sold stock.</description>
    <externalId>true</externalId>
    <inlineHelpText>Reference to the sold stock.</inlineHelpText>
    <label>Stock #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>