force-app/main/default/objects/Stock__c/fields/Stock_Bid__c.field-meta.xml
<CustomField>
    <fullName>Stock_Bid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Bid</label>
    <referenceTo>Stock_Bid__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>