force-app/main/default/objects/Stock__c/fields/Stock_Used_Title_Direct__c.field-meta.xml
<CustomField>
    <fullName>Stock_Used_Title_Direct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays if a Stock used Title Direct</description>
    <inlineHelpText>Displays if a Stock used Title Direct</inlineHelpText>
    <label>Stock Used Title Direct</label>
    <type>Checkbox</type>
</CustomField>