force-app/main/default/objects/Stock__c/fields/Stock_Used_Title_Procurement__c.field-meta.xml
<CustomField>
    <fullName>Stock_Used_Title_Procurement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays if the stock used Title Procurement</description>
    <inlineHelpText>Displays if the stock used Title Procurement</inlineHelpText>
    <label>Stock Used Title Procurement</label>
    <type>Checkbox</type>
</CustomField>