force-app/main/default/objects/Stock__c/fields/Stock_Used_Title_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Stock_Used_Title_Solutions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did Stock used Title Solutions?</description>
    <inlineHelpText>Did Stock used Title Solutions?</inlineHelpText>
    <label>Stock Used Title Solutions</label>
    <type>Checkbox</type>
</CustomField>