force-app/main/default/objects/Stock__c/fields/Stock_Used_Virtual_Release__c.field-meta.xml
<CustomField>
    <fullName>Stock_Used_Virtual_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did Stock used Virtual Release?</description>
    <inlineHelpText>Did Stock used Virtual Release?</inlineHelpText>
    <label>Stock Used Virtual Release</label>
    <type>Checkbox</type>
</CustomField>